<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewPostFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/content_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="4sp"
                android:padding="@dimen/common_spacing"
                tools:text="@tools:sample/lorem[30]" />

            <FrameLayout
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="gone">

                <ImageView
                    android:id="@+id/photo_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/preview_description"
                    tools:srcCompat="@tools:sample/avatars[12]" />

                <VideoView
                    android:id="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="412dp"
                    android:layout_gravity="center" />

                <View
                    android:id="@+id/videoPlaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="412dp"
                    android:background="?colorOnPrimary" />

                <ImageButton
                    android:id="@+id/playPauseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/play"
                    android:src="@drawable/ic_play" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/audioFile"
                    android:layout_width="144dp"
                    android:layout_height="48dp"
                    android:layout_margin="@dimen/common_spacing"
                    android:background="@drawable/audio_placeholder_background"
                    app:layout_constraintTop_toBottomOf="@id/content">

                    <ImageView
                        android:id="@+id/audioIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/audio_icon"
                        android:src="@drawable/ic_attach"
                        app:layout_constraintBottom_toBottomOf="@id/audioFile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/audioFileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="@dimen/common_spacing"
                        android:layout_toEndOf="@id/audioIcon"
                        android:background="@android:color/transparent"
                        android:text="@string/audio_file"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/audioIcon"
                        app:layout_constraintBottom_toBottomOf="@id/audioFile"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <Button
                    android:id="@+id/remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="@dimen/common_spacing"
                    android:text="@string/remove" />

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/audio_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/audio"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/preview_description"
                    app:layout_constraintBottom_toTopOf="@id/audio_remove"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/baseline_play_circle_filled_24" />

                <Button
                    android:id="@+id/audio_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/audio" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/tools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="BottomAppBar">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_camera"
            app:iconTint="?colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gallery"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_attach"
            app:iconTint="?colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/peopleOutline"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_people_24"
            app:iconTint="?colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_location"
            app:iconTint="?colorOnSurface" />

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.constraintlayout.widget.ConstraintLayout>